pods/liveness_probe_learning.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: crashloop-example
  labels:
    app: crashlooplearning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crashlooplearning
  template:
    metadata:
      labels:
        app: crashlooplearning
    spec:
      containers:
      - name: crashlooplearning
        image: abhishekf5/crashlooptest:v2
        ports:
        - containerPort: 8000
        livenessProbe:
         exec:
          command:
           - cat
           - /tmp/healthy
         initialDelaySeconds: 0
         periodSeconds: 1
