pods/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
spec:
  selector:
    app: apache-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 100
  type: LoadBalancer
